Make Util.groups return String[] instead of Stream